--- a/src/responsive.css
+++ b/src/responsive.css
@@ -13,6 +13,19 @@
 }
 
 
+@media only screen and (min-width: 1200px) and (max-width: 1399px) { 
+    .home-banner-carousel-item{
+        height: 440px !important;
+    }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) { 
+    .home-banner-carousel-item{
+        height: 375px !important;
+    }
+}
+
+
 
 /*		Tablet Layout: 768px.
             Gutters: 24px.
@@ -22,7 +35,11 @@
     cols    1     2      3      4      5      6      7      8
     px      68    160    252    344    436    528    620    712    */
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .home-banner-carousel-item{
+        height: 370px !important;
+    }
+}
 
 
 
@@ -34,9 +51,9 @@
     cols    1     2      3
     px      68    160    252    */
 
-@media only screen and (max-width: 767px) {}
+@media only screen and (max-width: 767px) {
 
-
+}
 
 /*		Wide Mobile Layout: 480px.
             Gutters: 24px.
@@ -46,7 +63,17 @@
     cols    1     2      3      4      5
     px      68    160    252    344    436    */
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {}
+@media only screen and (min-width: 535px) and (max-width: 767px) {
+    .home-banner-carousel-item{
+        height: 265px !important;
+    }
+}
+
+@media only screen and (max-width: 535px) { 
+    .home-banner-carousel-item{
+        height: 230px !important;
+    }
+}
 
 
 /*	Retina media query.
